# tailor-rs

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: absolute_path.rs  build_pkg.rs  cli.rs  cmake.rs  command.rs  config.rs  dependency.rs  dependency_manager.rs  disk.rs  error.rs  fmt.rs  git.rs  main.rs  message.rs  mode.rs  new_pkg.rs  package.rs  progress_bar.rs  project_creation.rs  remote_repo.rs  run_pkg.rs  storage.rs
src/command/: build_pkg.rs  clean_pkg.rs  mod.rs  new_pkg.rs  run_pkg.rs
src/commands/: build_pkg.rs  clean_pkg.rs  command.rs  mod.rs  new_pkg.rs  run_pkg.rs
src/external_tool/: checksum.rs  cmake.rs  compile_commands.rs  compiler.rs  custom_tool.rs  git.rs  mod.rs  registry.rs
src/manifest/: dependency.rs  edition.rs  kv.rs  mod.rs  package_type.rs  pattern_path.rs
template/: lib.c  lib.h
template/lib/: Tailor.toml
tests/: build_tests.rs  integration_test.rs  new_test.rs  plan.md
tests/common/: check_dir.rs  check_file.rs  mod.rs  tailor_user.rs  test_dir.rs
