[package]
name = "tailor"
authors = ["Matheus T. dos Santos <tenoriomatheus0@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.14"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.5.11"
