[package]
name = "tailor-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tailor"
path = "src/main.rs"

[dependencies]
dirs = "6.0.0"
flate2 = "1.1.5"
hex = "0.4.3"
reqwest = { version = "0.12.20", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
tar = "0.4.44"
toml = "0.8.23"
walkdir = "2.5.0"
